# pipe_rover

./: .gitignore  LICENSE  README.md  log_slam_status.sh
docs/: PROGRESS_REPORT.md  ZENOH_UI_DEVELOPMENT_GUIDE.md  pipe_slam_research_summary.md
external_pc_ui/: README.md  main.py  requirements.txt  zenoh_receiver.py
src/coin_lio/: CMakeLists.txt  README.md  package.xml
src/coin_lio/config/: line_removal.yaml  ouster128.yaml  params.yaml
src/coin_lio/include/: common_lib.h
src/coin_lio/include/coin_lio/: feature_manager.h  image_processing.h  projector.h
src/coin_lio/launch/: mapping.launch.py
src/coin_lio/src/: feature_manager.cpp  image_processing.cpp  laserMapping.cpp  laserMapping_coin.cpp  preprocess.cpp  preprocess.h  projector.cpp
src/line_laser_driver/: CMakeLists.txt  package.xml
src/line_laser_driver/config/: line_laser_params.yaml
src/line_laser_driver/launch/: line_laser.launch.py
src/line_laser_driver/scripts/: gpio_control.py  laser_sync_node.py
src/line_laser_driver/src/: line_laser_processor_node.cpp
src/vill_slam/: CMakeLists.txt  package.xml
src/vill_slam/config/: corridor_mode.yaml  microstrain_gv7.yaml  ouster_params.yaml  pipe_mode.yaml  vill_slam_params.yaml  zed_front_params.yaml  zed_side_params.yaml  zenoh_config.yaml
src/vill_slam/include/vill_slam/: cylinder_factor.hpp  plane_factor.hpp  surface_processor.hpp
src/vill_slam/launch/: sensors.launch.py  vill_slam.launch.py  vill_slam_corridor.launch.py  vill_slam_integrated.launch.py  zenoh_client.launch.py
src/vill_slam/scripts/: environment_detector.py  zenoh_client.py
src/vill_slam/src/: cylinder_factor.cpp  dense_mapper_node.cpp  plane_factor.cpp  surface_processor.cpp  vill_slam_node.cpp
src/vill_slam_msgs/: CMakeLists.txt  package.xml
src/vill_slam_msgs/msg/: GeometryConstraint.msg  LaserLine.msg  SurfaceSection.msg  VillSlamStatus.msg
src/vill_slam_recorder/: CMakeLists.txt  package.xml
src/vill_slam_recorder/config/: recorder_params.yaml
src/vill_slam_recorder/launch/: recorder.launch.py
src/vill_slam_recorder/scripts/: image_snapshot.py  multi_format_recorder.py
src/vill_slam_ui/: CMakeLists.txt  package.xml
src/vill_slam_ui/config/: ui_config.yaml
src/vill_slam_ui/launch/: vill_slam_ui.launch.py
src/vill_slam_ui/scripts/: run_ui.sh  vill_slam_monitor.py
unwrap/: .gitignore  ALGORITHM_REPORT.md  autolabel_circle.py  detect_circle_test.py  extract_frame.py  extract_r_theta_map.py  filtered_pcd.py  package.xml  pcd_texture_map.py  pipe_circle_plot.py  pipe_circle_plot2-2.py  pipe_circle_plot2.py  pipe_circle_plot3.py  pipe_circle_plot4-2.py  pipe_circle_plot4.py  plot_pcd.py  radius_by_theta.npy  radius_by_theta_filtered.npy  setup.cfg  setup.py  test_pcd.py  test_unwrap.py  train_pipe_circle.py  unwrap_image.py  warp_unwrapped_video.py
unwrap/data/pipe_learning_data/: classes.txt  notes.json  pipe_data.yaml
unwrap/data/pipe_learning_data/labels/: 1.txt  10.txt  100.txt  101.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  124.txt  125.txt  126.txt  127.txt  128.txt  129.txt  13.txt  130.txt  131.txt  132.txt  133.txt  14.txt  (+93 more)
unwrap/labels/: frame1_001.txt  frame1_002.txt  frame1_003.txt  frame1_004.txt  frame1_005.txt  frame1_006.txt  frame1_007.txt  frame1_008.txt  frame1_009.txt  frame1_010.txt  frame1_011.txt  frame1_012.txt  frame1_013.txt  frame1_014.txt  frame1_015.txt  frame1_016.txt  frame1_017.txt  frame1_018.txt  frame1_019.txt  frame1_020.txt  frame1_021.txt  frame1_022.txt  frame1_023.txt  frame1_024.txt  frame1_025.txt  frame2_000.txt  frame2_001.txt  frame2_002.txt  frame2_003.txt  frame2_004.txt  frame2_005.txt  frame2_006.txt  frame2_007.txt  frame2_008.txt  frame2_009.txt  frame2_010.txt  frame2_011.txt  frame2_012.txt  frame2_013.txt  frame2_014.txt  (+38 more)
unwrap/pipe_training/yolov8m_circle_detect/: args.yaml  results.csv
unwrap/pipe_vision/: inspect_tf.py  pipe_unroller_node.py
unwrap/scripts/: visualize_pipe_estimation.py  visualize_smoothing_comparison.py
